# git-sidecar

./: .dockerignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  test_dirtickets.py  test_sidecar.py
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml
prompts/: MultiRepo.md  e2edocker.md
tests/: Dockerfile  docker-compose.yml  entrypoint.sh  test-e2e.sh  test_sidecar.py
