[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sidecar"
version = "0.1.0"
description = "Automatically manage working directories for your git ticket branches"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "GitSidecar Contributors"}
]
keywords = ["git", "ticket", "directory", "workflow", "automation", "sidecar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.scripts]
sidecar = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
"*" = ["README.md", "LICENSE"]
